fixing spacing

--- a/blocks/articles-list/articles-list.css
+++ b/blocks/articles-list/articles-list.css
@@ -172,6 +172,11 @@
   border-color: rgb(0 0 0 / var(--tw-border-opacity))
 }
 
+.articles-list-wrapper :is(.border-gray-300) {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity))
+}
+
 .articles-list-wrapper :is(.bg-danaherlightblue-50) {
   --tw-bg-opacity: 1;
   background-color: rgb(239 251 253 / var(--tw-bg-opacity))
