--- a/blocks/insight/insight.css
+++ b/blocks/insight/insight.css
@@ -174,6 +174,10 @@
   padding-top: 3rem !important
 }
 
+.insight-wrapper :is(.pb-0) {
+  padding-bottom: 0px
+}
+
 .insight-wrapper :is(.text-2xl) {
   font-size: 1.5rem;
   line-height: 2rem
